log/build_2021-09-13_14-18-07/JNode_MotorController/stderr.log
  File "/home/spacecal/SpaceCal/install/JNode_MotorController/lib/python3.8/site-packages/JNode_MotorController/motorController.py", line 104
    global tic = TicI2C(bus, address)
               ^
SyntaxError: invalid syntax

